🐛 Fix logo sizing on firefox

--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -31,20 +31,18 @@
   }
 
   &-home {
-    position: sticky;
-    top: 10px;
     display: flex;
     align-items: center;
     margin-right: auto;
 
     &-logo {
+      min-width: 30px;
+      max-width: 30px;
       height: 30px;
-      margin-right: 6px;
-      width: 30px;
+      margin-right: 10px;
     }
 
     &-title {
-      margin-left: 4px;
       font-family: $fontFamilyRegular;
       font-weight: 700;
       font-size: 24px;
